# perfalyzer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
include/: library.h
src/: library.cpp
